2006-07-05  Derek Price  <derek@ximbiot.com>
	    Mark D. Baushke  <mdb@gnu.org>

	* add.c, checkout.c, client.c, recurse.c: Use new last_component() API.
	* filesubr.c, filesubr.h: Remove original last_component().

	* sanity.sh (abspath-2a.*): Insert `r' to remote test name variants.
	Misc cleanup.

	* subr.c (get_stream): Be slightly more conservative about memory
	allocation.  Comment more fully.

2006-07-03  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (recase-5si, recase-7si): Fix cases for MacOS X.

2006-07-03  Derek Price  <derek@ximbiot.com>

	* subr.c (get_file): Factor out...
	(get_stream): ...this function.  Simplify.
	* subr.h (get_stream): New proto.
	* sanity.sh: Update to compensate.

2006-06-29  Derek Price  <derek@ximbiot.com>

	* client.c (is_arg_a_parent_or_listed_dir): Strip trailing slashes from
	dir name defore searching for it.  Partially addresses TODO #205.
	Avoid false positives.
	* sanity.sh (trailingslashes): Update to compensate.

2006-06-28  Larry Jones  <lawrence.jones@ugs.com>

	* error.c (error): Downgrade syslog message priority from
	LOG_EMERG (which is frequently broadcast to all logged in users,
	most of whom are unlikely to understand or be able to do anything
	about the problem) to LOG_CRIT.

2006-06-28  Derek Price  <derek@ximbiot.com>

	[bug #16961]
	* login.c (get_cvs_password): Return copy of global variable.
	(Patch from <mbarabas@redhat.com>.)

2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* rcs.c (RCS_check_tag): Revert last change.
	* sanity.sh (tag-valid): Delete test.

2006-06-26  Derek Price  <derek@ximbiot.com>

	* sign.c (gen_signature), verify.c (verify_signature): Use new
	POPEN_BINARY_FLAG.

2006-06-24  Jim Hyslop <jhyslop@dreampossible.ca>

	* rcs.c: Tighten up error checking on valid tag identifiers.
	* sanity.sh: added test to exercise tag error checking.

	* sign.c, verify.c: back out "b" changes made earlier today - not
	supported by popen on other platforms.
