@@ -1,3 +1,7 @@
+2006-07-06  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (cvs_SOURCES): Add missing header files.
+
 2006-07-05  Derek Price  <derek@ximbiot.com>
 	    Mark D. Baushke  <mdb@gnu.org>
 
